# sia20_learning

./: CMakeLists.txt  cliping_leptorino.hpp  clipping.hpp  clipping_data.hpp  edit.csv  make_graph.cpp  make_minibatch.cpp  make_training_data.cpp  read_teacher_data.cpp  summary.csv  test.cpp  test_cliping.cpp  test_cliping_leptorino.cpp  tmp.model  train.cpp  train2.cpp  train3.cpp  train3_1.cpp  train3_2.cpp  train4.cpp  train4.model
long_normal_broom_training_data/: log_0.csv  log_1.csv  log_10.csv  log_11.csv  log_12.csv  log_13.csv  log_14.csv  log_15.csv  log_16.csv  log_17.csv  log_18.csv  log_19.csv  log_2.csv  log_20.csv  log_21.csv  log_22.csv  log_23.csv  log_24.csv  log_25.csv  log_26.csv  log_27.csv  log_28.csv  log_29.csv  log_3.csv  log_4.csv  log_5.csv  log_6.csv  log_7.csv  log_8.csv  log_9.csv  status.csv
model/: cliped_train_m2_w0.model
