cmake_minimum_required(VERSION 3.12)
project(sia20_learning)

add_definitions("-g3 -std=c++2a")

#add_executable(read_teacher_data read_teacher_data.cpp)
#add_executable(make_graph make_graph.cpp)
add_executable(train train.cpp)
add_executable(train2 train2.cpp)
#add_executable(test test.cpp)
#add_executable(make_minibatch make_minibatch.cpp)
add_executable(train3 train3.cpp)
add_executable(train3_1 train3_1.cpp)
add_executable(train3_2 train3_2.cpp)
add_executable(train4 train4.cpp)
add_executable(test_cliping test_cliping.cpp)
add_executable(test_cliping_leptorino test_cliping_leptorino.cpp)
#add_executable(concatenate_csv concatenate_csv.cpp)

#target_link_libraries(read_teacher_data fanda)
#target_link_libraries(make_graph fanda dynet pthread)
target_link_libraries(train fanda dynet pthread Gpop)
target_link_libraries(train2 fanda dynet pthread Gpop)
#target_link_libraries(test fanda dynet pthread)
#target_link_libraries(make_minibatch fanda)
target_link_libraries(train3 dynet pthread fanda Gpop)
target_link_libraries(train3_1 dynet pthread fanda Gpop)
target_link_libraries(train3_2 dynet pthread fanda Gpop)
target_link_libraries(train4 dynet pthread fanda Gpop)
#target_link_libraries(concatenate_csv fanda)
